# artisan_chatbot

./: .gitignore  README.md  requirements.txt
artisan-chatbot/: Dockerfile  fly.toml  main.py  pyproject.toml  web_crawler.py
artisan-chatbot/data/: docs.txt
