[tool.poetry]
name = "artisan-chatbot"
version = "0.1.0"
description = ""
authors = ["yexu15"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.5"}
uvicorn = "0.32.1"
faiss-cpu = "1.9.0.post1"
bs4 = "0.0.2"
langchain = "0.3.9"
langchain-community = "0.3.8"
langchain-openai = "0.2.10"
langchain-core = "0.3.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
